@@ -1724,6 +1724,13 @@
     (define/augment (after-set-position)
       (maybe-queue-editor-position-update)
       (inner (void) after-set-position))
+    (define/override use-file-text-mode
+      (case-lambda
+        [() (super use-file-text-mode)]
+        [(x) (super use-file-text-mode x)
+             (enqueue-for-frame
+              (λ (x) (send x use-file-text-mode-changed))
+              'framework:file-text-mode-changed)]))
     
     ;; maybe-queue-editor-position-update : -> void
     ;; updates the editor-position in the frame,
@@ -1754,9 +1761,9 @@
 (define clever-file-format-mixin
   (mixin ((class->interface text%)) (clever-file-format<%>)
     (inherit get-file-format set-file-format find-first-snip)
-
+      
     ;; all-string-snips : -> boolean
-    ;; returns #t when it is safe to save this file in 'text mode.
+    ;; returns #t when it is safe to save this file in regular (non-WXME) mode.
     (define/private (all-string-snips)
       (let loop ([s (find-first-snip)])
         (cond
@@ -1788,7 +1795,41 @@
            (set-file-format 'standard)]
           [else (void)]))
       (inner (void) on-save-file name format))
-    (super-instantiate ())))
+    
+    (super-new)))
+
+(define unix-line-endings-regexp #rx"(^$)|((^|[^\r])\n)")
+(unless (and (regexp-match? unix-line-endings-regexp "")
+             (regexp-match? unix-line-endings-regexp "\n")
+             (regexp-match? unix-line-endings-regexp "a\n")
+             (not (regexp-match? unix-line-endings-regexp "\r\n"))
+             (regexp-match? unix-line-endings-regexp "x\ny\r\nz\n")
+             (regexp-match? unix-line-endings-regexp "\n\r\n")
+             (not (regexp-match? unix-line-endings-regexp "a\r\nb\r\nc\r\n"))
+             (regexp-match? unix-line-endings-regexp "a\r\nb\r\nc\n")
+             (regexp-match? unix-line-endings-regexp "a\nb\r\nc\r\n"))
+  (error 'framework/private/text.rkt "unix-line-endings-regexp test failure"))
+
+(define crlf-line-endings<%> (interface ((class->interface text%))))
+
+(define crlf-line-endings-mixin
+  (mixin ((class->interface text%)) (crlf-line-endings<%>)
+    (inherit get-filename use-file-text-mode)
+    (define/augment (after-load-file success?)
+      (cond
+        [(preferences:get 'framework:always-use-platform-specific-linefeed-convention)
+         (define unix-endings?
+           (with-handlers ((exn:fail:filesystem? (λ (x) #t)))
+             (call-with-input-file (get-filename)
+               (λ (port)
+                 (regexp-match? unix-line-endings-regexp port)))))
+         (use-file-text-mode
+          (and (eq? (system-type) 'windows) 
+               unix-endings?))]
+        [else (use-file-text-mode #t)])
+      (inner (void) after-load-file success?))
+
+    (super-new)))
 
 
 (define file<%>
@@ -3464,11 +3505,16 @@ designates the character that triggers autocompletion
 (define completion-box% 
   (class* object% (completion-box<%>)
     
-    (init-field completions       ; scroll-manager%       the possible completions (all of which have base-word as a prefix)
-                line-x            ; int                   the x coordinate of the line where the menu goes
-                line-y-above      ; int                   the y coordinate of the top of the line where the menu goes
-                line-y-below      ; int                   the y coordinate of the bottom of the line where the menu goes
-                editor            ; editor<%>             the owner of this completion box
+    (init-field completions       ; scroll-manager%      
+                ;                   the possible completions (all of which have base-word as a prefix)
+                line-x            ; int                  
+                ;                   the x coordinate of the line where the menu goes
+                line-y-above      ; int                   
+                ;                   the y coordinate of the top of the line where the menu goes
+                line-y-below      ; int                  
+                ;                   the y coordinate of the bottom of the line where the menu goes
+                editor            ; editor<%>             
+                ;                   the owner of this completion box
                 )
     
     (define/public (empty?) (send completions empty?))
@@ -3524,7 +3570,9 @@ designates the character that triggers autocompletion
                  (cond
                    [(null? pc)
                     (let-values ([(hidden?) (send completions items-are-hidden?)] 
-                                 [(tw th _1 _2) (send dc get-text-extent hidden-completions-text (get-reg-font))])
+                                 [(tw th _1 _2) (send dc get-text-extent
+                                                      hidden-completions-text
+                                                      (get-reg-font))])
                       (let ([w (if hidden? (max tw w) w)]
                             [h (if hidden? (+ th h) h)])
                         (initialize-mouse-offset-map! coord-map)
@@ -3578,7 +3626,10 @@ designates the character that triggers autocompletion
           [(send completions empty?)
            (let ([font (send dc get-font)])
              (send dc set-font (get-mt-font))
-             (send dc draw-text (string-constant no-completions) (+ mx dx menu-padding-x) (+ menu-padding-y my dy))
+             (send dc draw-text 
+                   (string-constant no-completions) 
+                   (+ mx dx menu-padding-x)
+                   (+ menu-padding-y my dy))
              (send dc set-font font))]
           [else
            (send dc set-font (get-reg-font))
@@ -3641,7 +3692,8 @@ designates the character that triggers autocompletion
          (set! highlighted-menu-item 0)
          (scroll-display-down)]
         [else
-         (set! highlighted-menu-item (modulo (add1 highlighted-menu-item) (send completions get-visible-length)))
+         (set! highlighted-menu-item (modulo (add1 highlighted-menu-item)
+                                             (send completions get-visible-length)))
          (redraw)]))
     
     ;; prev-item : -> void
@@ -3654,7 +3706,8 @@ designates the character that triggers autocompletion
                (sub1 (send completions get-visible-length)))
          (scroll-display-up)]
         [else
-         (set! highlighted-menu-item (modulo (sub1 highlighted-menu-item) (send completions get-visible-length)))
+         (set! highlighted-menu-item (modulo (sub1 highlighted-menu-item)
+                                             (send completions get-visible-length)))
          (redraw)]))
     
     ;; scroll-display-down : -> void
@@ -3697,8 +3750,11 @@ designates the character that triggers autocompletion
     (define/public (handle-mouse-movement x y)
       (let*-values ([(mx my w h) (get-menu-coordinates)])
         (when (and (<= mx x (+ mx w))
-                   (< (+ my menu-padding-y) y (+ my (vector-length (geometry-mouse->menu-item-vector geometry)))))
-          (set! highlighted-menu-item (vector-ref (geometry-mouse->menu-item-vector geometry) (inexact->exact (- y my))))
+                   (< (+ my menu-padding-y)
+                      y 
+                      (+ my (vector-length (geometry-mouse->menu-item-vector geometry)))))
+          (set! highlighted-menu-item (vector-ref (geometry-mouse->menu-item-vector geometry)
+                                                  (inexact->exact (- y my))))
           (redraw))))
     
     ;; get-current-selection : -> string
@@ -4100,7 +4156,7 @@ designates the character that triggers autocompletion
 (define return% (return-mixin -keymap%))
 (define autowrap% (editor:autowrap-mixin -keymap%))
 (define file% (file-mixin (editor:file-mixin autowrap%)))
-(define clever-file-format% (clever-file-format-mixin file%))
+(define clever-file-format% (crlf-line-endings-mixin (clever-file-format-mixin file%)))
 (define backup-autosave% (editor:backup-autosave-mixin clever-file-format%))
 (define searching% (searching-mixin backup-autosave%))
 (define info% (info-mixin (editor:info-mixin searching%)))
